k3s/Deployments/traefik-example.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web
# ---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-ingress-from-ingress-nginx
#   namespace: web
# spec:
#   podSelector: {}  # applies to all pods
#   ingress:
#     - from:
#         - namespaceSelector:
#             matchLabels:
#               name: ingress-nginx
#   policyTypes:
#     - Ingress
# ---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-all-egress
#   namespace: ingress-nginx
# spec:
#   podSelector: {}
#   policyTypes:
#     - Egress
#   egress:
#     - {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
  namespace: web
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: httpd
        image: httpd:2.4.53-alpine
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-server-service
  namespace: web
spec:
  #type: NodePort #ClusterIP
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-server-ingress
  namespace: web
  annotations:
    # kubernetes.io/ingress.class: "traefik"
    spec.ingressClassName: "traefik"
spec:
  rules:
  - host: web.server.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-server-service
            port:
              number: 80
